# internal/users/delivery/user_handlers.go
@@ -10,17 +10,17 @@ import (
 	v "github.com/techwithmat/bookery-api/pkg/utils/validation"
 )
 
-//		@Summary		Register a new user
-//		@Description	Register a user using email, username, password and password confirmation
-//		@Tags			users
-//		@Accept			json
-//		@Produce		json
-//		@Param			request	body		domain.SignUpRequest	true	"Login data: email, password and password confirmation"
-//		@Success		201		{object}	domain.TokenResponse
-//	 @Failure		400   {object}  domain.RestError
-//	 @Failure		409   {object}  domain.RestError
-//	 @Failure		500   {object}  domain.RestError
-//		@Router			/users/signup [post]
+//	@Summary		Register a new user
+//	@Description	Register a user using email, username, password and password confirmation
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		domain.SignUpRequest	true	"Login data: email, password and password confirmation"
+//	@Success		201		{object}	domain.TokenResponse
+//	@Failure		400		{object}	httpErrors.RestError
+//	@Failure		409		{object}	httpErrors.RestError
+//	@Failure		500		{object}	httpErrors.RestError
+//	@Router			/users/signup [post]
 func (h *UserHandler) RegisterUser(c echo.Context) error {
 	ctx := c.Request().Context()
 	var user domain.SignUpRequest
@@ -42,17 +42,17 @@ func (h *UserHandler) RegisterUser(c echo.Context) error {
 	return c.JSON(http.StatusCreated, registerUser)
 }
 
-//		@Summary		Get an user account data
-//		@Description	Get id, email and role from a user
-//		@Tags			users
-//		@Accept			json
-//		@Produce		json
-//		@Param			user_id	path		int	true	"User ID"
-//		@Success		200		{object}	domain.GetUserResponse
-//	 @Failure		400   {object}  domain.RestError
-//	 @Failure		404   {object}  domain.RestError
-//	 @Failure		500   {object}  domain.RestError
-//		@Router			/users/{user_id} [get]
+//	@Summary		Get an user account data
+//	@Description	Get id, email and role from a user
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			user_id	path		int	true	"User ID"
+//	@Success		200		{object}	domain.GetUserResponse
+//	@Failure		400		{object}	httpErrors.RestError
+//	@Failure		404		{object}	httpErrors.RestError
+//	@Failure		500		{object}	httpErrors.RestError
+//	@Router			/users/{user_id} [get]
 func (h *UserHandler) GetUserByID(c echo.Context) error {
 	ctx := c.Request().Context()
 	id, err := strconv.Atoi(c.Param("id"))
@@ -70,17 +70,17 @@ func (h *UserHandler) GetUserByID(c echo.Context) error {
 	return c.JSON(http.StatusOK, user)
 }
 
-//		@Summary		Login a user
-//		@Description	Login a user using email and password receive a JWT as a response from a successful login
-//		@Tags			users
-//		@Accept			json
-//		@Produce		json
-//		@Param			request	body		domain.LoginRequest	true	"Login data: email and password"
-//		@Success		200		{object}	domain.TokenResponse
-//	 @Failure		400   {object}  domain.RestError
-//	 @Failure		404   {object}  domain.RestError
-//	 @Failure		500   {object}  domain.RestError
-//		@Router			/users/login [post]
+//	@Summary		Login a user
+//	@Description	Login a user using email and password receive a JWT as a response from a successful login
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		domain.LoginRequest	true	"Login data: email and password"
+//	@Success		200		{object}	domain.TokenResponse
+//	@Failure		400		{object}	httpErrors.RestError
+//	@Failure		404		{object}	httpErrors.RestError
+//	@Failure		500		{object}	httpErrors.RestError
+//	@Router			/users/login [post]
 func (h *UserHandler) LoginUser(c echo.Context) error {
 	ctx := c.Request().Context()
 	var user domain.LoginRequest
@@ -100,19 +100,19 @@ func (h *UserHandler) LoginUser(c echo.Context) error {
 	return c.JSON(http.StatusOK, loggedUser)
 }
 
-// @Summary		Delete current user
-// @Description	Delete the current user account
-// @Tags			users
-// @Accept			json
-// @Produce		json
-// @Param			user_id			path	int	true	"User ID"
-// @Param			Authorization	header	string	true	"With the bearer started."
-// @Success		204
-// @Failure		401   {object}  domain.RestError
-// @Failure		400   {object}  domain.RestError
-// @Failure		404   {object}  domain.RestError
-// @Failure		500   {object}  domain.RestError
-// @Router			/users/{user_id} [delete]
+//	@Summary		Delete current user
+//	@Description	Delete the current user account
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			user_id			path	int		true	"User ID"
+//	@Param			Authorization	header	string	true	"With the bearer started."
+//	@Success		204
+//	@Failure		401	{object}	httpErrors.RestError
+//	@Failure		400	{object}	httpErrors.RestError
+//	@Failure		404	{object}	httpErrors.RestError
+//	@Failure		500	{object}	httpErrors.RestError
+//	@Router			/users/{user_id} [delete]
 func (u *UserHandler) DeleteUser(c echo.Context) error {
 	ctx := c.Request().Context()
 	userId := c.Get("id").(int64)
